--- a/index.html
+++ b/index.html
@@ -35,82 +35,90 @@
                 <!-- Triangle Card -->
                 <div class="geometry-component">
                     <img src="images/triangle.png" alt="">
-                    <h3 class="card-heading">Triangle</h3>
+                    <h3 id="tri-card-title" class="card-heading">Triangle</h3>
                     <p class="equation">Area(A) = 0.5 <span>&#215;</span>
                         b <span>&#215;</span>
                         h</p>
-                    <input class="input-area" type="text" placeholder="b"> <span>cm</span>
-                    <input class="input-area" type="text" placeholder="h"> <span>cm</span>
-                    <button class="calculate-btn">Calculate</button>
+                    <input id="tri-b-value" class="input-area" type="text" placeholder="b"> <span>cm</span>
+                    <input id="tri-h-value" class="input-area" type="text" placeholder="h"> <span>cm</span>
+                    <button id="triangle-calculate-btn" class="calculate-btn">Calculate</button>
                 </div>
 
                 <!-- Rectangle Card -->
                 <div class="geometry-component">
                     <img src="images/rectangle.png" alt="">
-                    <h3 class="card-heading">Rectangle</h3>
+                    <h3 id="rectangle-card-title" class="card-heading">Rectangle</h3>
                     <p class="equation">Area(A) = 
                         w <span>&#215;</span>
                         l</p>
-                    <input class="input-area" type="text" placeholder="w"> <span>cm</span>
-                    <input class="input-area" type="text" placeholder="l"> <span>cm</span>
-                    <button class="calculate-btn">Calculate</button>
+                    <input id="rectangle-w-value" class="input-area" type="text" placeholder="w"> <span>cm</span>
+                    <input id="rectangle-l-value" class="input-area" type="text" placeholder="l"> <span>cm</span>
+                    <button id="rectangle-calculate-btn" class="calculate-btn">Calculate</button>
                 </div>
 
                 <!-- Parallelogram Card -->
                 <div class="geometry-component">
                     <img src="images/parallelogram.png" alt="">
-                    <h3 class="card-heading">Parallelogram</h3>
+                    <h3 id="parallelo-card-title" class="card-heading">Parallelogram</h3>
                     <p class="equation">Area(A) = 
                         b <span>&#215;</span>
                         h</p>
-                    <input class="input-area" type="text" placeholder="b"> <span>cm</span>
-                    <input class="input-area" type="text" placeholder="h"> <span>cm</span>
-                    <button class="calculate-btn">Calculate</button>
+                    <input id="parallelo-b-value" class="input-area" type="text" placeholder="b"> <span>cm</span>
+                    <input id="parallelo-h-value" class="input-area" type="text" placeholder="h"> <span>cm</span>
+                    <button id="parallelogram-calculate-btn" class="calculate-btn">Calculate</button>
                 </div>
 
                 <!-- Rhombus -->
                 <div class="geometry-component">
                     <img src="images/rhombus.png" alt="">
-                    <h3 class="card-heading">Rhombus</h3>
+                    <h3 id="rhom-card-title" class="card-heading">Rhombus</h3>
                     <p class="equation">Area(A) = 0.5 <span>&#215;</span>
                         d<sub>1</sub> <span>&#215;</span>
                         d<sub>2</sub></p>
-                    <input class="input-area" type="text" placeholder="d1"> <span>cm</span>
-                    <input class="input-area" type="text" placeholder="d2"> <span>cm</span>
-                    <button class="calculate-btn">Calculate</button>
+                    <input id="rhom-d1-value" class="input-area" type="text" placeholder="d1"> <span>cm</span>
+                    <input id="rhom-d2-value" class="input-area" type="text" placeholder="d2"> <span>cm</span>
+                    <button id="rhombus-calculate-btn" class="calculate-btn">Calculate</button>
                 </div>
 
                 <!-- Pentagon Card-->
                 <div class="geometry-component">
                     <img src="images/pentagon.png" alt="">
-                    <h3 class="card-heading">Parallelogram</h3>
+                    <h3 id="penta-card-title" class="card-heading">Pentagon</h3>
                     <p class="equation">Area(A) = 0.5 <span>&#215;</span>
                         p <span>&#215;</span>
                         b</p>
-                    <input class="input-area" type="text" placeholder="p"> <span>cm</span>
-                    <input class="input-area" type="text" placeholder="b"> <span>cm</span>
-                    <button class="calculate-btn">Calculate</button>
+                    <input id="penta-p-value" class="input-area" type="text" placeholder="p"> <span>cm</span>
+                    <input id="penta-b-value" class="input-area" type="text" placeholder="b"> <span>cm</span>
+                    <button id="pentagon-calculate-btn" class="calculate-btn">Calculate</button>
                 </div>
 
                 <!-- Ellipse Card -->
                 <div class="geometry-component">
                     <img src="images/ellipse.png" alt="">
-                    <h3 class="card-heading">Ellipse</h3>
+                    <h3 id="ellips-card-title" class="card-heading">Ellipse</h3>
                     <p class="equation">Area(A) = <span id="pi">&#8508;</span>ab</p>
-                    <input class="input-area" type="text" placeholder="a"> <span>cm</span>
-                    <input class="input-area" type="text" placeholder="b"> <span>cm</span>
-                    <button class="calculate-btn">Calculate</button>
+                    <input id="ellips-a-value" class="input-area" type="text" placeholder="a"> <span>cm</span>
+                    <input id="ellips-b-value" class="input-area" type="text" placeholder="b"> <span>cm</span>
+                    <button id="ellipse-calculate-btn" class="calculate-btn">Calculate</button>
                 </div>
 
 
             </div>
-            <div class="geometry-calculation">
-                <h2><u>Area Calculation</u></h2>
+            <div  class="geometry-calculation">
+                <h2 id="geo-heading"><u>Area Calculation</u></h2>
+                <table id="table-container" class="table-datas">
+                    
+                </table>
+
+                
             </div>
         </div>
     </main>
 
 
+
+    <!-- JS fil Links -->
+    <script src="scripts/calculations.js"></script>
 </body>
 
 </html>
