blog page design completed

--- a/blog.html
+++ b/blog.html
@@ -4,11 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Googole Font Link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+
+    <!-- Custom CSS link -->
+    <link rel="stylesheet" href="styles/blog.css">
+    <title>Blog Corner</title>
 </head>
 <body>
-    <table>
-        <td style="margin: 10px;"></td>
-    </table>
+    <header>
+        <nav>
+            <div>
+                <h1 id="nav-title">Blog Corner</h1>
+                
+            </div>
+            <div>
+                <button id="home-btn" class="header-btn">Home</button>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <div class="blog-container">
+            <h2 class="blog-question">What is DOM and what is the purpose of DOM?</h2>
+            <p class="blog-answer">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus facere asperiores blanditiis nam impedit aliquam quasi quas error quam excepturi. Obcaecati a quod perspiciatis dolorem similique totam aperiam accusamus quasi, saepe odio omnis necessitatibus libero officiis tempore dolores sequi placeat, repellendus natus porro dolorum. Placeat illo odit asperiores molestiae beatae labore saepe non amet mollitia sunt, voluptates dolores, at, a pariatur totam. Ad incidunt magni commodi provident. In modi temporibus, aperiam magnam vero enim harum autem aliquam delectus sequi cumque odio quo rem iure consectetur ut iste, placeat voluptatem nesciunt? Explicabo quod eveniet nemo fuga consectetur sed quia nostrum repellat.</p>
+        </div>
+        <div class="blog-container">
+            <h2 class="blog-question">How will you select HTML elements using DOM? Name the DOM methods.</h2>
+            <p class="blog-answer">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus facere asperiores blanditiis nam impedit aliquam quasi quas error quam excepturi. Obcaecati a quod perspiciatis dolorem similique totam aperiam accusamus quasi, saepe odio omnis necessitatibus libero officiis tempore dolores sequi placeat, repellendus natus porro dolorum. Placeat illo odit asperiores molestiae beatae labore saepe non amet mollitia sunt, voluptates dolores, at, a pariatur totam. Ad incidunt magni commodi provident. In modi temporibus, aperiam magnam vero enim harum autem aliquam delectus sequi cumque odio quo rem iure consectetur ut iste, placeat voluptatem nesciunt? Explicabo quod eveniet nemo fuga consectetur sed quia nostrum repellat.</p>
+        </div>
+        <div class="blog-container">
+            <h2 class="blog-question">What is event bubble?</h2>
+            <p class="blog-answer">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus facere asperiores blanditiis nam impedit aliquam quasi quas error quam excepturi. Obcaecati a quod perspiciatis dolorem similique totam aperiam accusamus quasi, saepe odio omnis necessitatibus libero officiis tempore dolores sequi placeat, repellendus natus porro dolorum. Placeat illo odit asperiores molestiae beatae labore saepe non amet mollitia sunt, voluptates dolores, at, a pariatur totam. Ad incidunt magni commodi provident. In modi temporibus, aperiam magnam vero enim harum autem aliquam delectus sequi cumque odio quo rem iure consectetur ut iste, placeat voluptatem nesciunt? Explicabo quod eveniet nemo fuga consectetur sed quia nostrum repellat.</p>
+        </div>
+        <div class="blog-container">
+            <h2 class="blog-question">What is a callback function and why will you use it?</h2>
+            <p class="blog-answer">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus facere asperiores blanditiis nam impedit aliquam quasi quas error quam excepturi. Obcaecati a quod perspiciatis dolorem similique totam aperiam accusamus quasi, saepe odio omnis necessitatibus libero officiis tempore dolores sequi placeat, repellendus natus porro dolorum. Placeat illo odit asperiores molestiae beatae labore saepe non amet mollitia sunt, voluptates dolores, at, a pariatur totam. Ad incidunt magni commodi provident. In modi temporibus, aperiam magnam vero enim harum autem aliquam delectus sequi cumque odio quo rem iure consectetur ut iste, placeat voluptatem nesciunt? Explicabo quod eveniet nemo fuga consectetur sed quia nostrum repellat.</p>
+        </div>
+    </main>
+
+
+    <!-- JS File Links -->
+    <script src="scripts/blog.js"></script>
 </body>
 </html>
