--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h3 id="nav-lower-title">Geometric Book</h3>
             </div>
             <div>
-                <button class="header-btn">Blog</button>
+                <button id="blog-btn" class="header-btn">Blog</button>
             </div>
         </nav>
     </header>
