blog page updated

--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,8 @@
     <header>
         <nav>
             <div>
-                <h1 id="nav-title">Blog Corner</h1>
+                <h1 id="nav-upper-title">Tech Blog</h1>
+                <h3 id="nav-lower-title">Corner</h3>
                 
             </div>
             <div>
